<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorBackgroundMain"
android:orientation="vertical"
tools:context="com.xencosworks.musicplayer.Details">

<ImageView
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:scaleType="centerCrop"
    android:src="@drawable/dummy_cover" />

<ListView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/header"
    android:layout_marginTop="-16dp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.xencosworks.musicplayer.Details" />

<LinearLayout
    android:id="@+id/details_state_artist"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@id/header"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/album_artist_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        tools:text="Aritst Name" />

    <TextView
        android:id="@+id/album_artist_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        tools:text="Track Count" />
</LinearLayout>

<LinearLayout
    android:id="@+id/details_navigate_back"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/topCard"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:orientation="horizontal"
    android:paddingEnd="16dp"
    android:paddingRight="16dp">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_action_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/details_back"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>

<ImageView
    android:id="@+id/detalis_fab"
    android:layout_width="55dp"
    android:layout_height="55dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="26dp"
    android:layout_marginEnd="26dp"
    android:layout_marginRight="26dp"
    android:layout_marginTop="-27.5dp"
    android:background="@drawable/fab"
    android:elevation="15dp"
    android:padding="10dp"
    android:src="@drawable/ic_action_play" />

<LinearLayout
    android:id="@+id/details_state_songs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/header"
    android:layout_marginLeft="26dp"
    android:layout_marginRight="26dp"
    android:layout_marginTop="26dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/details_song_title"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:text="Title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/details_song_artist"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/details_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:text="Artist" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/details_song_duration"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/details_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        tools:text="99:99" />
</LinearLayout>


</RelativeLayout>