<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundMain"
    android:orientation="vertical"
    tools:context="com.xencosworks.musicplayer.MainActivity">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/colorPrimaryDark"
        />

    <View
        android:id="@+id/darken_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:id="@+id/topCardContainer">
        <android.support.v7.widget.CardView
            android:id="@+id/topCard"
            android:layout_width="0dp"
            android:layout_weight="7"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/library_sort_by_btn"
                        android:layout_width="49dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center_vertical"
                        android:padding="9dp"
                        android:src="@drawable/ic_ham_menu_sort" />

                    <TextView
                        android:id="@+id/search_info_text"
                        android:layout_width="wrap_content"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:text="@string/library_search_library"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/search_bar_search_btn"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_action_search" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/library_expandable_sort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <RadioGroup
                        android:id="@+id/radio_sort_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:paddingLeft="16dp"
                        android:paddingStart="16dp">

                        <RadioButton
                            android:id="@+id/radio_songs"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/library_sort_by_songs" />

                        <RadioButton
                            android:id="@+id/radio_artist"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/library_sort_by_artists" />

                        <RadioButton
                            android:id="@+id/radio_album"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/library_sort_by_albums" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:id="@+id/go_back_to_player"
            android:src="@drawable/ic_action_library"
            android:padding="10dp"
            android:scaleType="fitCenter">

        </ImageButton>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/current_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topCardContainer"
        android:layout_marginLeft="27dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_setup_sorted_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="Songs" />

        <TextView
            android:id="@+id/track_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            tools:text="150 Track" />
    </LinearLayout>

    <ImageView
        android:id="@+id/play_fab"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/header"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginTop="-27.5dp"
        android:background="@drawable/fab"
        android:elevation="15dp"
        android:padding="10dp"
        android:src="@drawable/ic_action_play" />

    <ListView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="-16dp"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.xencosworks.musicplayer.LibraryActivity">

    </ListView>


    <android.support.v7.widget.CardView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_err_mark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/library_permission_error"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="26dp"
                android:layout_marginLeft="49dp"
                android:layout_marginRight="26dp"
                android:layout_marginStart="49dp"
                android:gravity="center_vertical"
                android:text="@string/library_permission_explain"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/grant_access"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="Grant Access"
                    android:theme="@style/PermissionButton" />
            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/bottomCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="3dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_action_play" />

            <TextView
                android:id="@+id/bottomCard_currentActiveDetails"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="Current Song - Artist" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:src="@drawable/ic_action_player"
                android:textColor="@color/colorAccent" />
        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>